<!-- File: app/src/main/res/layout/item_follow_request.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="User"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvMeta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/follow_request_meta"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:alpha="0.85"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAccept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvMeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnReject"
        app:layout_constraintHorizontal_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReject"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reject"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvMeta"
        app:layout_constraintStart_toEndOf="@id/btnAccept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
